--- a/Source/Inthudo/DataObjects/DataObjects.csproj
+++ b/Source/Inthudo/DataObjects/DataObjects.csproj
@@ -112,6 +112,7 @@
     <Compile Include="EntityFramework\Order.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
     </Compile>
+    <Compile Include="EntityFramework\OrderDao.cs" />
     <Compile Include="EntityFramework\OrderItem.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
     </Compile>
@@ -121,6 +122,7 @@
     <Compile Include="EntityFramework\Product.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
     </Compile>
+    <Compile Include="EntityFramework\ProductDao.cs" />
     <Compile Include="EntityFramework\RoleTypeDao.cs" />
     <Compile Include="EntityFramework\Setting.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
@@ -133,6 +135,8 @@
     <Compile Include="EntityFramework\DynamicLinq.cs" />
     <Compile Include="EntityFramework\MemberDao.cs" />
     <Compile Include="IMemberDao.cs" />
+    <Compile Include="IOrderDao.cs" />
+    <Compile Include="IProductDao.cs" />
     <Compile Include="IRoleTypeDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
