--- a/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
+++ b/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
@@ -54,13 +54,18 @@
     <Compile Include="BusinessRules\ValidationOperator.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DepositMethodBO.cs" />
     <Compile Include="Design.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderDetail.cs" />
+    <Compile Include="OrderSearch.cs" />
+    <Compile Include="OrderStatusBO.cs" />
+    <Compile Include="OrderStatusMapping.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleType.cs" />
+    <Compile Include="ShippingMethodBO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
