--- a/Source/Inthudo/DataObjects/App.Config
+++ b/Source/Inthudo/DataObjects/App.Config
@@ -1,16 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
   <connectionStrings>
-    <add name="InthudoEntities" connectionString="metadata=res://*/EntityFramework.Inthudo.csdl|res://*/EntityFramework.Inthudo.ssdl|res://*/EntityFramework.Inthudo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=THT\SQLEXPRESS;initial catalog=InThuDoMNG;user id=sa;password=niemvui;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InThuDoEntities" connectionString="metadata=res://*/EntityFramework.Inthudo.csdl|res://*/EntityFramework.Inthudo.ssdl|res://*/EntityFramework.Inthudo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=THT\SQLEXPRESS;initial catalog=InThuDoMNG;user id=sa;password=niemvui;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
 </configuration>
