--- a/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
+++ b/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BusinessRules\ValidationOperator.cs" />
     <Compile Include="CategoryBO.cs" />
     <Compile Include="CustomerBO.cs" />
+    <Compile Include="DepartmentBO.cs" />
     <Compile Include="DepositMethodBO.cs" />
     <Compile Include="DesignRequestBO.cs" />
     <Compile Include="ManufactureRequestBO.cs" />
