--- a/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
+++ b/Source/Inthudo/BusinessObjects/BusinessObjects.csproj
@@ -64,10 +64,12 @@
     <Compile Include="OrderSearch.cs" />
     <Compile Include="OrderStatusBO.cs" />
     <Compile Include="OrderStatusMappingBO.cs" />
+    <Compile Include="OrganizationBO.cs" />
     <Compile Include="ProductBO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleTypeBO.cs" />
     <Compile Include="ShippingMethodBO.cs" />
+    <Compile Include="UserOrganizationMapppingBO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
