--- a/Source/Inthudo/Common/Common/Common.csproj
+++ b/Source/Inthudo/Common/Common/Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Constant.cs" />
     <Compile Include="InthudoException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CommonHelper.cs" />
