--- a/Source/Inthudo/DataObjects/DataObjects.csproj
+++ b/Source/Inthudo/DataObjects/DataObjects.csproj
@@ -134,6 +134,7 @@
     <Compile Include="EntityFramework\Setting.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
     </Compile>
+    <Compile Include="EntityFramework\SettingDao.cs" />
     <Compile Include="EntityFramework\User.cs">
       <DependentUpon>Inthudo.tt</DependentUpon>
     </Compile>
@@ -149,6 +150,7 @@
     <Compile Include="IOrderDao.cs" />
     <Compile Include="IProductDao.cs" />
     <Compile Include="IRoleTypeDao.cs" />
+    <Compile Include="ISettingDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
