--- a/Source/Inthudo/InthudoService/InthudoService/InthudoService.csproj
+++ b/Source/Inthudo/InthudoService/InthudoService/InthudoService.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IMemberService.cs" />
     <Compile Include="IOrderService.cs" />
     <Compile Include="IRoleTypeService.cs" />
+    <Compile Include="ISettingService.cs" />
     <Compile Include="MemberService.cs" />
     <Compile Include="MemberStatus.cs" />
     <Compile Include="OrderService.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleTypeService.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="SettingService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BusinessObjects\BusinessObjects.csproj">
