--- a/Source/Inthudo/Presentation/Web/Web.csproj
+++ b/Source/Inthudo/Presentation/Web/Web.csproj
@@ -192,6 +192,8 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="CustomerAdd.aspx" />
+    <Content Include="CustomerEdit.aspx" />
     <Content Include="DesignRequestAdd.aspx" />
     <Content Include="DesignRequestEdit.aspx" />
     <Content Include="DesignRequests.aspx" />
@@ -217,6 +219,9 @@
     <Content Include="MemberAdd.aspx" />
     <Content Include="MemberEdit.aspx" />
     <Content Include="Members.aspx" />
+    <Content Include="Modules\CustomerAdd.ascx" />
+    <Content Include="Modules\CustomerEdit.ascx" />
+    <Content Include="Modules\CustomerInfo.ascx" />
     <Content Include="Modules\CustomerSearch.ascx" />
     <Content Include="Modules\CustomerSelect.ascx" />
     <Content Include="Modules\DatePicker.ascx" />
@@ -255,6 +260,7 @@
     <Content Include="packages.config" />
     <Content Include="Site2.Master" />
     <Content Include="Popup.Master" />
+    <Content Include="WebService.asmx" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -358,6 +364,20 @@
     <Compile Include="Controls\BaseUserControl.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="CustomerAdd.aspx.cs">
+      <DependentUpon>CustomerAdd.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerAdd.aspx.designer.cs">
+      <DependentUpon>CustomerAdd.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerEdit.aspx.cs">
+      <DependentUpon>CustomerEdit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerEdit.aspx.designer.cs">
+      <DependentUpon>CustomerEdit.aspx</DependentUpon>
+    </Compile>
     <Compile Include="DesignRequestAdd.aspx.cs">
       <DependentUpon>DesignRequestAdd.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -392,6 +412,27 @@
     </Compile>
     <Compile Include="ManufactureRequestEdit.aspx.designer.cs">
       <DependentUpon>ManufactureRequestEdit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\CustomerAdd.ascx.cs">
+      <DependentUpon>CustomerAdd.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Modules\CustomerAdd.ascx.designer.cs">
+      <DependentUpon>CustomerAdd.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\CustomerEdit.ascx.cs">
+      <DependentUpon>CustomerEdit.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Modules\CustomerEdit.ascx.designer.cs">
+      <DependentUpon>CustomerEdit.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\CustomerInfo.ascx.cs">
+      <DependentUpon>CustomerInfo.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Modules\CustomerInfo.ascx.designer.cs">
+      <DependentUpon>CustomerInfo.ascx</DependentUpon>
     </Compile>
     <Compile Include="Modules\CustomerSearch.ascx.cs">
       <DependentUpon>CustomerSearch.ascx</DependentUpon>
@@ -711,6 +752,10 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebService.asmx.cs">
+      <DependentUpon>WebService.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
